# parallex

./: .gitignore  README.md  main.py  pyproject.toml
.github/: dependabot.yml
parallex/: parallex.py
parallex/ai/: batch_processor.py  open_ai_client.py  output_processor.py  uploader.py
parallex/exceptions/: BatchCreationError.py  BatchProcessingError.py
parallex/file_management/: converter.py  file_finder.py  utils.py
parallex/models/: batch_file.py  image_file.py  page_response.py  parallex_callable_input.py  parallex_callable_output.py  parallex_ouput.py  raw_file.py  upload_batch.py
parallex/schemas/: input.py
parallex/utils/: constants.py  logger.py
